--- a/src/qt/forms/tradingdialog.ui
+++ b/src/qt/forms/tradingdialog.ui
@@ -181,7 +181,7 @@
       <string>Asks</string>
      </property>
     </widget>
-    <widget class="QLabel" name="EPLSupply">
+    <widget class="QLabel" name="ELPSupply">
      <property name="geometry">
       <rect>
        <x>540</x>
@@ -197,7 +197,7 @@
       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
      </property>
     </widget>
-    <widget class="QLabel" name="EPLDemand">
+    <widget class="QLabel" name="ELPDemand">
      <property name="geometry">
       <rect>
        <x>160</x>
@@ -432,7 +432,7 @@
     <attribute name="title">
      <string>Buy</string>
     </attribute>
-    <widget class="QPushButton" name="BuyEPL">
+    <widget class="QPushButton" name="BuyELP">
      <property name="geometry">
       <rect>
        <x>30</x>
@@ -442,7 +442,7 @@
       </rect>
      </property>
      <property name="text">
-      <string>Buy EPL</string>
+      <string>Buy ELP</string>
      </property>
      <property name="icon">
       <iconset resource="../ellerium.qrc">
@@ -512,7 +512,7 @@
       </rect>
      </property>
      <property name="text">
-      <string>EPL</string>
+      <string>ELP</string>
      </property>
     </widget>
     <widget class="QLabel" name="label_5">
@@ -1704,10 +1704,10 @@
       </rect>
      </property>
      <property name="text">
-      <string>EPL</string>
+      <string>ELP</string>
      </property>
     </widget>
-    <widget class="QLineEdit" name="UnitsInputEPL">
+    <widget class="QLineEdit" name="UnitsInputELP">
      <property name="geometry">
       <rect>
        <x>310</x>
@@ -1741,7 +1741,7 @@
       </font>
      </property>
     </widget>
-    <widget class="QPushButton" name="SellEPLBTN">
+    <widget class="QPushButton" name="SellELPBTN">
      <property name="geometry">
       <rect>
        <x>30</x>
@@ -1751,7 +1751,7 @@
       </rect>
      </property>
      <property name="text">
-      <string>Sell EPL</string>
+      <string>Sell ELP</string>
      </property>
      <property name="icon">
       <iconset resource="../ellerium">
@@ -1777,12 +1777,12 @@
          </font>
         </property>
         <property name="text">
-         <string>EPL Available:</string>
+         <string>ELP Available:</string>
         </property>
        </widget>
       </item>
       <item>
-       <widget class="QLabel" name="EPLAvailableLabel">
+       <widget class="QLabel" name="ELPAvailableLabel">
         <property name="palette">
          <palette>
           <active>
@@ -2213,7 +2213,7 @@
        </widget>
       </item>
       <item>
-       <widget class="QLabel" name="labelEPL">
+       <widget class="QLabel" name="labelELP">
         <property name="font">
          <font>
           <weight>75</weight>
@@ -2221,7 +2221,7 @@
          </font>
         </property>
         <property name="text">
-         <string>EPL</string>
+         <string>ELP</string>
         </property>
        </widget>
       </item>
@@ -2733,7 +2733,7 @@
       <string>TextLabel</string>
      </property>
     </widget>
-    <widget class="QLabel" name="EPLBalanceLabel">
+    <widget class="QLabel" name="ELPBalanceLabel">
      <property name="geometry">
       <rect>
        <x>150</x>
@@ -2762,7 +2762,7 @@
       </font>
      </property>
      <property name="text">
-      <string>EPL Balance:</string>
+      <string>ELP Balance:</string>
      </property>
     </widget>
     <widget class="QLabel" name="label_12">
@@ -2784,7 +2784,7 @@
       <string>BTC Balance:</string>
      </property>
     </widget>
-    <widget class="QLabel" name="EPLAvailableLabel_2">
+    <widget class="QLabel" name="ELPAvailableLabel_2">
      <property name="geometry">
       <rect>
        <x>150</x>
@@ -2813,7 +2813,7 @@
       </font>
      </property>
      <property name="text">
-      <string>EPL Available:</string>
+      <string>ELP Available:</string>
      </property>
     </widget>
     <widget class="QLabel" name="label_14">
@@ -2832,10 +2832,10 @@
       </font>
      </property>
      <property name="text">
-      <string>EPL Pending:</string>
+      <string>ELP Pending:</string>
      </property>
     </widget>
-    <widget class="QLabel" name="EPLPendingLabel">
+    <widget class="QLabel" name="ELPPendingLabel">
      <property name="geometry">
       <rect>
        <x>150</x>
@@ -2928,7 +2928,7 @@
       </font>
      </property>
      <property name="text">
-      <string>Bittrex EPL Deposit Address:</string>
+      <string>Bittrex ELP Deposit Address:</string>
      </property>
     </widget>
     <widget class="QPushButton" name="GenDepositBTN">
